organize and more

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="newtab/styles/index.css" />
   <link rel="stylesheet" href="newtab/styles/animations.css" />
   <link rel="icon" href="./assets/icon.png" type="image/x-icon">
-  <script src="newtab/scripts/index.ts" type="module" defer></script>
+  <script src="newtab/scripts/init.ts" type="module" defer></script>
 </head>
 
 <body dir="ltr" class="bg-neutral-500 min-h-screen grid place-items-center">
