--- a/src/options.html
+++ b/src/options.html
@@ -11,6 +11,7 @@
   <script src="options/scripts/inputs.ts" type="module" defer></script>
   <script src="options/scripts/onload.ts" type="module" defer></script>
   <script src="options/scripts/keybinds.ts" type="module" defer></script>
+  <script src="options/scripts/init.ts" type="module" defer></script>
   <link rel="icon" href="./assets/icon.svg" type="image/x-icon">
   <title>options ヽ(・ω・*)</title>
 </head>
