--- a/src/options.html
+++ b/src/options.html
@@ -16,12 +16,12 @@
   <div class="grid grid-flow-row w-[95%] sm:w-[60%] md:w-[40%] mx-auto">
     <div class="grid place-items-center gap-4 p-4">
       <img src="./assets/icon.png" class="w-40 aspect-square animate-float" alt="logo">
-      <h1 class="text-white w-max text-4xl font-semibold">
-        <span class="text-emerald-500">mtab</span><span class="text-neutral-500 text-base">/</span><span>options</span>
+      <h1 class="text-white w-max text-2xl md:text-4xl font-semibold">
+        <span class="text-emerald-500">mtab</span><span class="text-neutral-500">/</span><span>options</span>
       </h1>
     </div>
     <div>
-      <p class="text-center text-white">this is the options page (wip)</p>
+      <p class="text-center text-white text-sm md:text-base">this is the options page (wip)</p>
     </div>
     <main class="grid grid-flow-row gap-20 pt-16">
       <!-- user -->
@@ -152,7 +152,7 @@
           </div>
         </div>
         <div class="grid gap-2">
-          <p class="text-white text-base">wallpaper.url</p>
+          <p class="text-white text-base">wallpaper.url (needs wallpaper.type to be url)</p>
           <div id="wallpaper-url-container"
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
             <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
