--- a/src/options.html
+++ b/src/options.html
@@ -336,24 +336,24 @@
       </section>
     </main>
     <!-- save buttons and more -->
-    <div class="p-4 grid grid-flow-row gap-2 place-items-center mt-20 mb-12">
-      <div class="grid grid-flow-col place-items-center w-max gap-2">
+    <div class="p-4 grid grid-flow-row gap-4 place-items-center mt-20 mb-12">
+      <div class="grid grid-cols-3 place-items-center w-max gap-2">
         <button id="save-button"
-          class="w-20 bg-emerald-500 hover:bg-emerald-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
-          <span class="text-white text-base m-0">save</span>
+          class="w-full bg-emerald-500 hover:bg-emerald-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
+          <span class="text-white text-base m-0">save (ctrl+s)</span>
         </button>
         <button id="export-button"
-          class="w-20 bg-indigo-500 hover:bg-indigo-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
-          <span class="text-white text-base m-0">export</span>
+          class="w-full bg-indigo-500 hover:bg-indigo-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
+          <span class="text-white text-base m-0">export (ctrl+e)</span>
         </button>
         <button id="import-button"
-          class="w-20 bg-indigo-500 hover:bg-indigo-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
-          <span class="text-white text-base m-0">import</span>
+          class="w-full bg-indigo-500 hover:bg-indigo-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
+          <span class="text-white text-base m-0">import (ctrl+i)</span>
         </button>
       </div>
       <div class="grid grid-flow-col place-items-center w-max gap-2">
         <button id="reset-to-default-button"
-          class="w-max bg-rose-500 hover:bg-rose-600 duration-300 ease-in-out  py-1 rounded-md cursor-pointer">
+          class="bg-rose-500 hover:bg-rose-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
           <span class="text-white text-base m-0">reset to default</span>
         </button>
       </div>
