fix export import

--- a/src/options.html
+++ b/src/options.html
@@ -343,7 +343,7 @@
             <span class="text-white text-base">save(ctrl+s)</span>
           </button>
           <button id="export-button" class="bg-indigo-500 hover:bg-indigo-600 transition p-2 rounded-md cursor-pointer">
-            <span class="text-white text-base">export</span>
+            <span class="text-white text-base">save & export</span>
           </button>
           <button id="import-button" class="bg-indigo-500 hover:bg-indigo-600 transition p-2 rounded-md cursor-pointer">
             <span class="text-white text-base">import</span>
