--- a/src/options.html
+++ b/src/options.html
@@ -204,6 +204,15 @@
               class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color...">
           </div>
         </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">ui.highlightColor</p>
+          <div id="ui-highlight-color-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="ui-highlight-color-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color...">
+          </div>
+        </div>
       </section>
       <!-- animations -->
       <section class="grid grid-flow-row gap-4">
