--- a/src/options.html
+++ b/src/options.html
@@ -45,23 +45,23 @@
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500 text-base">title</span>
+          <span class="text-neutral-500 text-base">title.defaultTitle</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
           <p class="text-white text-base">title</p>
-          <div id="title-container"
+          <div id="title-default-title-container"
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
             <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
-            <input id="title-input" type="text" autocomplete="off"
+            <input id="title-default-title-input" type="text" autocomplete="off"
               class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input title...">
           </div>
         </div>
         <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
-          <p class="text-white text-base">dynamicTitle.enabled</p>
+          <p class="text-white text-base">title.dynamic.enabled</p>
           <div class="ml-auto">
             <label class="relative inline-flex items-center cursor-pointer">
-              <input id="dynamicTitle-enabled-checkbox" type="checkbox" value="" class="sr-only peer" />
+              <input id="title-dynamic-enabled-checkbox" type="checkbox" value="" class="sr-only peer" />
               <div
                 class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
               </div>
