--- a/src/options.html
+++ b/src/options.html
@@ -343,6 +343,32 @@
           </div>
         </div>
       </section>
+      <section class="grid grid-flow-row gap-4">
+        <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <span class="text-neutral-500 text-base">hotkeys</span>
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+        </div>
+        <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+          <p class="text-white text-base">hotkeys.enabled</p>
+          <div class="ml-auto">
+            <label class="relative inline-flex items-center cursor-pointer">
+              <input id="hotkeys-enabled-checkbox" type="checkbox" value="" class="sr-only peer" />
+              <div
+                class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+              </div>
+            </label>
+          </div>
+        </div>
+        <div class="grid grid-cols-[auto_max-content]">
+          <span class="text-white text-base">activationKey</span>
+          <kbd class="bg-neutral-800 rounded-md p-1 text-neutral-500 text-sm">SPC</kbd>
+        </div>
+        <div class="grid grid-cols-[auto_max-content]">
+          <span class="text-white text-base">closePageKey</span>
+          <kbd class="bg-neutral-800 rounded-md p-1 text-neutral-500 text-sm">x</kbd>
+        </div>
+      </section>
     </main>
     <!-- save buttons and more -->
     <div class="py-4 grid grid-flow-row gap-4 place-items-center mt-20 mb-12">
