--- a/src/options.html
+++ b/src/options.html
@@ -369,6 +369,13 @@
           <kbd class="bg-neutral-800 rounded-md p-1 text-neutral-500 text-sm">x</kbd>
         </div>
       </section>
+      <section class="grid grid-flow-row gap-4">
+        <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <span class="text-neutral-500 text-base">bookmarks</span>
+          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+        </div>
+        <div id="bookmarks-options-container"></div>
     </main>
     <!-- save buttons and more -->
     <div class="py-4 grid grid-flow-row gap-4 place-items-center mt-20 mb-12">
