more bookmark stuff

--- a/src/options.html
+++ b/src/options.html
@@ -375,7 +375,7 @@
           <span class="text-neutral-500 text-base">bookmarks</span>
           <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
         </div>
-        <div id="bookmarks-options-container"></div>
+        <div id="bookmarks-options-container" class="grid grid-flow-row gap-4"></div>
     </main>
     <!-- save buttons and more -->
     <div class="py-4 grid grid-flow-row gap-4 place-items-center mt-20 mb-12">
