--- a/src/options.html
+++ b/src/options.html
@@ -27,9 +27,9 @@
       <!-- user -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">user</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
           <p class="text-white text-base">user.name</p>
@@ -44,12 +44,12 @@
       <!-- title -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
-          <span class="text-neutral-500 text-base">title.defaultTitle</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
+          <span class="text-neutral-500 text-base">title</span>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
-          <p class="text-white text-base">title</p>
+          <p class="text-white text-base">title.defaultTitle</p>
           <div id="title-default-title-container"
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
             <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
@@ -72,9 +72,9 @@
       <!-- message -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">message</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
           <p class="text-white text-base">message.font</p>
@@ -123,9 +123,9 @@
       <!-- wallpaper -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">wallpaper</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
           <p class="text-white text-base">wallpaper.enabled</p>
@@ -171,9 +171,9 @@
       <!-- ui -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">ui</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2 text-base">
           <p class="text-white">ui.style</p>
@@ -217,9 +217,9 @@
       <!-- animations -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">animations</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
           <p class="text-white text-base">animations.enabled</p>
@@ -278,9 +278,9 @@
       <!-- search -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">search</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid gap-2">
           <p class="text-white text-base">search.font</p>
@@ -345,9 +345,9 @@
       </section>
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">hotkeys</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
           <p class="text-white text-base">hotkeys.enabled</p>
@@ -371,9 +371,9 @@
       </section>
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">bookmarks</span>
-          <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
         </div>
         <div id="bookmarks-options-container" class="grid grid-flow-row gap-4"></div>
     </main>
@@ -393,9 +393,9 @@
         </div>
         <div class="w-full grid grid-flow-row gap-4 place-items-center">
           <div class="w-full grid grid-cols-[1fr_max-content_1fr] gap-2">
-            <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+            <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
             <span class="text-neutral-500 text-base">danger</span>
-            <div class="bg-neutral-500 h-[0.1rem] rounded-md my-auto"></div>
+            <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           </div>
           <button id="reset-to-default-button"
             class="w-full lg:w-max bg-rose-500 hover:bg-rose-600 transition p-2 rounded-md cursor-pointer">
