--- a/src/options.html
+++ b/src/options.html
@@ -343,6 +343,7 @@
           </div>
         </div>
       </section>
+      <!-- hotkeys -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
@@ -369,11 +370,29 @@
           <kbd class="bg-neutral-800 rounded-md p-1 text-neutral-500 text-sm">x</kbd>
         </div>
       </section>
+      <!-- bookmarks -->
       <section class="grid grid-flow-row gap-4">
         <div class="grid grid-cols-[1fr_max-content_1fr] gap-2">
           <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
           <span class="text-neutral-500 text-base">bookmarks</span>
           <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
+        </div>
+        <div class="grid gap-2 text-base">
+          <p class="text-white">bookmarks.type</p>
+          <div class="grid grid-cols-2 gap-2">
+            <button id="bookmarks-type-default-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">default</span>
+            </button>
+            <button id="bookmarks-type-user-defined-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">user-defined</span>
+            </button>
+            <button id="bookmarks-type-none-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">none</span>
+            </button>
+          </div>
         </div>
         <div id="bookmarks-options-container" class="grid grid-flow-row gap-4"></div>
     </main>
