--- a/src/options.html
+++ b/src/options.html
@@ -21,7 +21,12 @@
       </h1>
     </div>
     <div>
-      <p class="text-center text-white text-sm md:text-base">this is the options page (wip)</p>
+      <p class="text-center text-sm md:text-base">
+        <a href="https://github.com/maxhu08/mtab" target="_blank"
+          class="cursor-pointer text-blue-500 hover:text-blue-600 transition">github</a>
+        <span class="text-neutral-500"> | </span>
+        <span id="version-number-text" class="text-indigo-500">version </span>
+      </p>
     </div>
     <main class="grid grid-flow-row gap-20 pt-16">
       <!-- user -->
