change how icons are stored

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="newtab/styles/tailwind.css" />
   <link rel="stylesheet" href="newtab/styles/index.css" />
   <link rel="stylesheet" href="newtab/styles/animations.css" />
+  <link rel="stylesheet" href="assets/icons/remixicon.css" />
   <link rel="icon" href="./assets/icon.png" type="image/x-icon">
   <script src="newtab/scripts/init.ts" type="module" defer></script>
 </head>
