--- a/src/options.html
+++ b/src/options.html
@@ -403,13 +403,14 @@
           <p class="text-white">bookmarks.userDefined</p>
           <p class="text-white">
             needs bookmarks.type to be user-defined, valid iconTypes can be found here:
-            <a href="./icon-types.html" target="_blank"
+            <a href="https://remixicon.com/" target="_blank"
               class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
-              icon-types
-            </a>
+              remixicon.com
+            </a> <span class="text-indigo-500">(using version v4.2.0)</span>
           </p>
           <div id="bookmarks-options-container" class="grid grid-flow-row gap-4"></div>
         </div>
+      </section>
     </main>
     <!-- save buttons and more -->
     <div class="py-4 grid grid-flow-row gap-4 place-items-center mt-20 mb-12">
