add default bookmarks bar

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           class="font-search outline-none bg-transparent text-white placeholder-neutral-500">
       </div>
     </div>
-    <div id="bookmarks-container" class="grid grid-cols-2 md:grid-cols-4 w-full gap-2"></div>
+    <div id="bookmarks-container"></div>
   </div>
 </body>
 
