--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <p id="message" class="font-message text-white text-center text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
       <div id="search-container"
         class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
-        <span class="text-teal-500 font-semibold select-none">→&nbsp;</span>
+        <span class="text-teal-500 font-semibold select-none">->&nbsp;</span>
         <input id="search-input" type="text" autocomplete="off"
           class="font-search outline-none bg-transparent text-white placeholder-neutral-500">
       </div>
