more firefox stuff and add more search engine options

--- a/src/options.html
+++ b/src/options.html
@@ -471,12 +471,30 @@
                 </div>
               </button>
               <button
+                id="search-engine-brave-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center"
+              >
+                <div class="grid grid-cols-[24px_max-content] gap-2">
+                  <img src="assets/search-engines/brave.png" alt="brave" />
+                  <span class="text-white">brave</span>
+                </div>
+              </button>
+              <button
                 id="search-engine-yahoo-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center"
               >
                 <div class="grid grid-cols-[24px_max-content] gap-2">
                   <img src="assets/search-engines/yahoo.png" alt="yahoo" />
                   <span class="text-white">yahoo</span>
+                </div>
+              </button>
+              <button
+                id="search-engine-yandex-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none grid place-items-center"
+              >
+                <div class="grid grid-cols-[24px_max-content] gap-2">
+                  <img src="assets/search-engines/yandex.png" alt="yandex" />
+                  <span class="text-white">yandex</span>
                 </div>
               </button>
             </div>
