add ability to change text color of search and message text

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
         <span class="text-teal-500 font-semibold select-none">->&nbsp;</span>
         <input id="search-input" type="text" autocomplete="off"
-          class="font-search outline-none bg-transparent text-white placeholder-neutral-500">
+          class="font-search outline-none bg-transparent placeholder-neutral-500">
       </div>
     </div>
     <div id="bookmarks-container"></div>
