--- a/src/options.html
+++ b/src/options.html
@@ -92,6 +92,15 @@
               class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input font..." />
           </div>
         </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">message.textColor</p>
+          <div id="message-text-color-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="message-text-color-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+          </div>
+        </div>
         <div class="grid gap-2 text-base">
           <p class="text-white">message.type</p>
           <div class="grid grid-cols-2 gap-2">
@@ -310,6 +319,15 @@
             <input id="search-placeholder-text-input" type="text" autocomplete="off"
               class="outline-none bg-transparent text-white placeholder-neutral-500"
               placeholder="input placeholder..." />
+          </div>
+        </div>
+        <div class="grid gap-2">
+          <p class="text-white text-base">search.textColor</p>
+          <div id="search-text-color-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="search-text-color-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
           </div>
         </div>
         <div class="grid gap-2 text-base">
