--- a/src/options.html
+++ b/src/options.html
@@ -312,6 +312,15 @@
           </div>
         </div>
         <div class="grid gap-2">
+          <p class="text-white text-base">search.textColor</p>
+          <div id="search-text-color-container"
+            class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+            <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+            <input id="search-text-color-input" type="text" autocomplete="off"
+              class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+          </div>
+        </div>
+        <div class="grid gap-2">
           <p class="text-white text-base">search.placeholderText</p>
           <div id="search-placeholder-text-container"
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
@@ -322,11 +331,11 @@
           </div>
         </div>
         <div class="grid gap-2">
-          <p class="text-white text-base">search.textColor</p>
-          <div id="search-text-color-container"
+          <p class="text-white text-base">search.placeholderTextColor</p>
+          <div id="search-placeholder-text-color-container"
             class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
             <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
-            <input id="search-text-color-input" type="text" autocomplete="off"
+            <input id="search-placeholder-text-color-input" type="text" autocomplete="off"
               class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
           </div>
         </div>
