fix wallpaper option moving on toggle

--- a/src/options.html
+++ b/src/options.html
@@ -167,23 +167,25 @@
             </button>
           </div>
         </div>
-        <div class="grid gap-2">
-          <div id="wallpaper-url-section">
-            <p class="text-white text-base">wallpaper.url</p>
-            <div id="wallpaper-url-container"
-              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
-              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
-              <input id="wallpaper-url-input" type="text" autocomplete="off"
-                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input url..." />
+        <div class="grid">
+          <div class="grid gap-2">
+            <div id="wallpaper-url-section">
+              <p class="text-white text-base">wallpaper.url</p>
+              <div id="wallpaper-url-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+                <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+                <input id="wallpaper-url-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input url..." />
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid gap-2">
-          <div id="wallpaper-file-upload-section">
-            <p class="text-white text-base">wallpaper.fileUpload</p>
-            <div>
-              <input type="file" id="wallpaper-file-upload" accept="image/*"
-                class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+          <div class="grid gap-2">
+            <div id="wallpaper-file-upload-section">
+              <p class="text-white text-base">wallpaper.fileUpload</p>
+              <div>
+                <input type="file" id="wallpaper-file-upload" accept="image/*"
+                  class="bg-cyan-500 hover:bg-cyan-600 transition w-max p-2 rounded-md text-white text-base cursor-pointer" />
+              </div>
             </div>
           </div>
         </div>
