--- a/src/options.html
+++ b/src/options.html
@@ -430,13 +430,16 @@
             </label>
           </div>
         </div>
-        <div class="grid grid-cols-[auto_max-content]">
-          <span class="text-white text-base">activationKey</span>
-          <kbd class="bg-neutral-800 rounded-md p-1 text-neutral-500 text-sm">SPC</kbd>
-        </div>
-        <div class="grid grid-cols-[auto_max-content]">
-          <span class="text-white text-base">closePageKey</span>
-          <kbd class="bg-neutral-800 rounded-md p-1 text-neutral-500 text-sm">x</kbd>
+        <div class="grid grid-flow-row gap-2 bg-neutral-800 rounded-md p-2">
+          <div class="grid grid-cols-[auto_max-content]">
+            <span class="text-white text-base">activationKey</span>
+            <kbd class="bg-neutral-900 rounded-md p-1 text-neutral-500 text-sm">SPC</kbd>
+          </div>
+          <div class="bg-neutral-500 h-[1px] rounded-md my-auto"></div>
+          <div class="grid grid-cols-[auto_max-content]">
+            <span class="text-white text-base">closePageKey</span>
+            <kbd class="bg-neutral-900 rounded-md p-1 text-neutral-500 text-sm">x</kbd>
+          </div>
         </div>
       </section>
       <!-- bookmarks -->
