add message if no default bookmarks and more

--- a/src/options.html
+++ b/src/options.html
@@ -474,7 +474,8 @@
               class="cursor-pointer text-blue-500 hover:text-blue-600 transition">
               remixicon.com
             </a>
-            <span class="text-indigo-500">(using version v4.2.0)</span>
+            <span class="text-indigo-500">(using version v4.2.0)</span>.
+            iconTypes should be classes beginning with `ri-`
           </p>
           <div id="bookmarks-options-container" class="grid grid-flow-row gap-4"></div>
         </div>
